frontend-react/src/components/molecules/TaskList/TaskList.module.css
.taskList {
	display: flex;
	flex-direction: column;
	gap: inherit;
}

.task {
	display: flex;
	align-items: center;
	gap: var(--space-2);
	position: relative;
}

.taskText {
	padding: 0 var(--space-1);
}

/* Starts Checkbox hide/show */
.checkbox.checkbox {
	opacity: 0;
	pointer-events: none;
	transition: opacity 300ms ease-in;
}
.taskText {
	transform: translateX(
		calc(-1 * (20px + var(--space-2)))
	); /* transalteX: [checkbox width] + [task gap] */
	transition: transform 300ms ease-in;
}

.task:hover .checkbox,
.task:hover .editBtn {
	opacity: 1;
	pointer-events: auto;
}
.task:hover .taskText {
	transform: translateX(0);
}

.checkbox.checked {
	opacity: 1;

	pointer-events: auto;
}
.taskText.checked {
	transform: translateX(0);
}
/* Ends Checkbox hide/show */

.editBtn.editBtn {
	opacity: 0;
	flex-shrink: 0;
	padding: var(--space-1);
	border-radius: 50%;
	position: absolute;
	right: var(--space-1);
	top: var(--space-1);
	z-index: 50;
	background-color: #fff;
}
.editBtn:hover {
	background-image: linear-gradient(
		var(--black-alpha-10),
		var(--black-alpha-10)
	);
}
.editBtn:active {
	background-image: linear-gradient(
		var(--black-alpha-20),
		var(--black-alpha-20)
	);
}

